<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.unicarsindos.ProfileActivity"
    android:orientation="vertical"
    android:background="#BDBDBD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_and_second_name_label"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text_view_users_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:textSize="15sp"/>
       <TextView
            android:id="@+id/text_view_users_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text_view_users_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text_view_users_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_label"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text_view_users_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_users_days_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:labelFor="@+id/text_view_users_email"
            android:text="Ημερες και Ωρες:"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_view_users_days_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_view_users_information_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_label"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/text_view_users_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/open_map_urge"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_map"
        android:layout_gravity="center"/>

</LinearLayout>
