<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="@string/offer_a_ride_page_2_tag"
    android:background="#BDBDBD">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Δημιουργία Προφιλ"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
    <CheckBox
        android:id="@+id/check_box_monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/monday"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/edit_text_time_monday_go"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    <EditText
        android:id="@+id/edit_text_time_monday_return"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
    <CheckBox
        android:id="@+id/check_box_tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/tuesday"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/edit_text_time_tuesday_go"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    <EditText
        android:id="@+id/edit_text_time_tuesday_return"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

    <CheckBox
        android:id="@+id/check_box_wensday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/wensday"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/edit_text_time_wensday_go"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    <EditText
        android:id="@+id/edit_text_time_wensday_return"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
    <CheckBox
        android:id="@+id/check_box_thursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/thursday"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/edit_text_time_thursday_go"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    <EditText
        android:id="@+id/edit_text_time_thursday_return"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/check_box_friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/friday"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/edit_text_time_friday_go"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>
    <EditText
        android:id="@+id/edit_text_time_friday_return"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:hint="@string/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:enabled="false"
        android:focusable="false"
        android:background="@drawable/rounded_edit_text_disabled"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/text_view_information_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_information"
        android:text="@string/information_label" />

    <EditText
        android:id="@+id/edit_text_information"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="6"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="6"
        android:background="@drawable/rounded_edit_text"
        android:scrollbars="vertical"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="75dp"/>

    <Button
        android:id="@+id/action_finish"
        android:text="@string/action_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>

</LinearLayout>